# missing-methods

./: LICENSE  README.md  pyproject.toml
examples/: UCI_wine.ipynb  development_testing.ipynb  examples.ipynb  kernel_pls.ipynb  testing.ipynb
missing_methods/: __init__.py  assessment.py  impute.py  kernel.py  lda.py  logistic.py  mfa.py  nan_utils.py  pca_pls.py  plotting.py  preprocessing.py  qda.py  rv.py  sk.py
tests/: test_public_api.py  test_sklearn_api.py
